package com.directi.training.isp.exercise;

public interface Isensing {
	public void proximityCallback();
}
