package com.directi.training.isp.exercise;

public interface Itimer {
	 public void timeOutCallback();
}
